# markov_namegen

./: .gitignore  Cargo.toml  LICENSE.md  README.md
examples/: main.rs
src/: interface.rs  lib.rs  main.rs
src/characterchain/: builder.rs  generator.rs  mod.rs
src/clusterchain/: builder.rs  generator.rs  mod.rs
